# R3Math

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  Mat.hpp  Vec1.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
lib/operations/: dot.hpp  magnitude.hpp
lib/types/: Mat.hpp  Vec1.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
test/: CMakeLists.txt  main.cpp
